# signal-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.markdown
crates/client/: Cargo.toml  build.rs
crates/client/src/: main.rs
crates/double-ratchet/: Cargo.toml
crates/double-ratchet/src/: chains.rs  encrypt.rs  keys.rs  lib.rs  ratchet.rs  session.rs  tests.rs  util.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/signal/: Cargo.toml
crates/signal-common/: Cargo.toml
crates/signal-common/src/: convert.rs  error.rs  keys.rs  lib.rs
crates/signal/src/: lib.rs
crates/x3dh/: Cargo.toml
crates/x3dh/src/: convert.rs  error.rs  keys.rs  keyserver.rs  lib.rs  one.rs  participant.rs  peer.rs
schema/: keyserver.capnp  relay.capnp  util.capnp
