[package]
name = "signal-common"
version = "0.1.0"
authors = ["Andrew Dona-Couch <signal-rs@andrewcou.ch>"]

[dependencies]
curve25519-dalek = "0.21.0"
ed25519-dalek = "0.8.1"
rand = "0.5.5"
sha2 = "0.7"

[dependencies.x25519-dalek]
version = "0.3.0"
default-features = false
features = ["std", "u64_backend"]
