[package]
name = "x3dh"
version = "0.1.0"
authors = ["Andrew Dona-Couch <signal-rs@andrewcou.ch>"]

[dependencies]
curve25519-dalek = "0.21.0"
ed25519-dalek = "0.8.1"
orion = "0.13"
rand = "0.5.5"
sha2 = "0.7"

signal-common = { path = "../signal-common" }

[dependencies.x25519-dalek]
version = "0.3.0"
default-features = false
features = ["std", "u64_backend"]
